--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fable.Lit.Feliz" Version="1.0.0-beta-003" />
     <PackageReference Include="Fable.Lit.Elmish" Version="1.0.0-beta-003" />
     <PackageReference Include="Fable.Core" Version="3.3.0-beta-001" />
   </ItemGroup>
