--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="LitExtensions.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Controllers.fs" />
+    <Compile Include="ClockSpeed.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
